@@ -312,6 +312,7 @@ void NetUpdate(void)
     int newtics = I_GetTime() - lastmadetic;
     newtics = (newtics > 0 ? newtics : 0);
     lastmadetic += newtics;
+    if (ffmap) newtics++;
     while (newtics--) {
       I_StartTic();
       if (maketic - gametic > BACKUPTICS/2) break;
